# whisperops

./: .gitignore  .sops.yaml  Makefile  README.md
.claude/agents/: _template.md.example
.claude/agents/ai-ml/: ai-data-engineer.md  ai-prompt-specialist.md  genai-architect.md  llm-specialist.md
.claude/agents/aws/: ci-cd-specialist.md  lambda-builder.md
.claude/agents/code-quality/: code-cleaner.md  code-documenter.md  code-reviewer.md  code-simplifier.md  dual-reviewer.md  python-developer.md  test-generator.md
.claude/agents/communication/: adaptive-explainer.md  meeting-analyst.md  the-planner.md
.claude/agents/dev/: dev-loop-executor.md  prompt-crafter.md
.claude/agents/domain/: dataops-builder.md  docker-compose-architect.md  extraction-specialist.md  frontend-architect.md  function-developer.md  infra-deployer.md  k8s-platform-engineer.md  observability-engineer.md  pipeline-architect.md  python-lambda-developer.md  search-indexer-specialist.md  typescript-developer.md
.claude/agents/exploration/: codebase-explorer.md  kb-architect.md
.claude/agents/workflow/: brainstorm-agent.md  build-agent.md  define-agent.md  design-agent.md  iterate-agent.md  ship-agent.md
.claude/commands/core/: memory.md  sync-context.md  telemetry.md
.claude/commands/dev/: dev.md
.claude/commands/knowledge/: create-kb.md
.claude/commands/review/: review.md
.claude/commands/workflow/: brainstorm.md  build.md  create-pr.md  define.md  design.md  iterate.md  ship.md
.claude/dev/: _index.md  readme.md
.claude/dev/templates/: PROGRESS_TEMPLATE.md  PROMPT_EXAMPLE_FEATURE.md  PROMPT_EXAMPLE_KB.md  PROMPT_TEMPLATE.md
.claude/kb/: _index.yaml  test.md
.claude/kb/argo-rollouts/: index.md  quick-reference.md
.claude/kb/argocd/: index.md  quick-reference.md
.claude/kb/code-simplifier/: index.md  quick-reference.md
.claude/kb/docker-compose-local-dev/: index.md  quick-reference.md
.claude/kb/fastapi-lambda/: index.md  quick-reference.md
.claude/kb/helm-helmfile/: index.md  quick-reference.md
.claude/kb/kubernetes/: index.md  manifest.yaml  quick-reference.md
.claude/kb/ollama-local-serving/: index.md  quick-reference.md
.claude/kb/otel-lgtm/: index.md  quick-reference.md
.claude/kb/python-httpx-async/: index.md  quick-reference.md
.claude/kb/react-search-ui/: index.md  quick-reference.md
.claude/kb/sqlite-fts5/: index.md  quick-reference.md
.claude/sdd/: _index.md  readme.md
.claude/sdd/architecture/: ARCHITECTURE.md  WORKFLOW_CONTRACTS.yaml
.claude/sdd/features/: BRAINSTORM_whisperops.md  DEFINE_whisperops.md  DESIGN_whisperops.md
.claude/telemetry/: REPORT_TEMPLATE.md  readme.md
.github/workflows/: agent-eval.yml  ci.yml  release.yml
backstage-templates/dataset-whisperer/: template.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  NEXT_STEPS.md  OBSERVABILITY.md  OPERATIONS.md  SECRETS.md  SECURITY.md  SESSION_STATE.md
docs/runbooks/: agent-creation.md  budget-kill-switch.md  incident-response.md  langfuse-self-host-recovery.md  platform-bootstrap.md  slo-burn-alert.md
notes/: PLAN_dataset-whisperer.md
platform/: helmfile.yaml.gotmpl
platform/crossplane/: external-secret-bootstrap.yaml  provider-config.yaml  provider-gcp.yaml
platform/external-access/: ingresses.yaml
platform/observability/: alloy-values.yaml  grafana-datasources-extra.yaml  grafana-datasources.yaml  grafana-langfuse-datasource.yaml  grafana-stackdriver-datasource.yaml  kube-state-metrics-values.yaml  kyverno-values.yaml  langfuse-values.yaml  lgtm-values.yaml  node-exporter-values.yaml  otel-collector-alias-svc.yaml  otel-collector-values.yaml  tempo-values.yaml
platform/scripts/: clean-orphan-iam-bindings.py  rewrite-backstage-hosts.sh
platform/values/: kagent-mcp-grafana-secret.yaml  kagent-nginx-dd47.yaml  kagent-nginx-timeout.yaml  kagent-postrender.sh  kagent-values.yaml  keycloak-postrender.sh
platform/whisperops-system/: platform-config.yaml
scripts/: build-images.sh  patch-kagent-ui-nginx.sh  print-endpoints.sh  push-whisperops-to-gitea.sh
secrets/: anthropic.enc.yaml  crossplane-gcp-creds.enc.yaml  langfuse.enc.yaml  openai.enc.yaml  supabase.enc.yaml
src/budget-controller/: Dockerfile  main.py  pyproject.toml
src/budget-controller/tests/: test_main.py
src/chat-frontend/: .dockerignore  Dockerfile  components.json  eslint.config.mjs  instrumentation.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
src/platform-bootstrap/: Dockerfile  bootstrap.py  profile_schema.py  pyproject.toml
src/platform-bootstrap/profiles/: california-housing.json  online-retail-ii.json  spotify-tracks.json
src/platform-bootstrap/tests/: test_profile_generation.py
src/sandbox/: Dockerfile  pyproject.toml
src/sandbox/app/: artifact_upload.py  credentials.py  execution.py  main.py  mcp_server.py  observability.py  plotly_theme.py  schemas.py
src/sandbox/tests/: test_credentials.py  test_execution.py  test_main.py  test_plotly_theme.py  test_plotly_upload.py
terraform/: backend.tf  main.tf  observability.tf  outputs.tf  variables.tf
terraform/files/: startup-script.sh
tests/smoke/: agent-creation.sh  platform-up.sh  query-roundtrip.sh
(+323 files in other folders)
