[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "platform-bootstrap"
version = "0.1.0"
description = "Dataset profiler and Supabase pgvector loader for Dataset Whisperer"
requires-python = ">=3.12"
dependencies = [
    "openai==1.82.0",
    "supabase==2.15.2",
    "google-cloud-storage==2.19.0",
    "pandas==2.2.3",
    "numpy==2.2.5",
    "pydantic==2.11.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "ruff==0.11.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
