[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandbox"
version = "0.1.0"
description = "Sandboxed Python code execution service for Dataset Whisperer"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "pydantic>=2.11.0,<3",
    "google-cloud-storage==2.19.0",
    "opentelemetry-api==1.33.1",
    "opentelemetry-sdk==1.33.1",
    "opentelemetry-instrumentation-fastapi==0.54b0",
    "opentelemetry-exporter-otlp-proto-grpc==1.33.1",
    "mcp==1.27.1",
    "plotly>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "httpx==0.28.1",
    "ruff==0.11.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
